--- a/fenv_graphql_codegen/pubspec.yaml
+++ b/fenv_graphql_codegen/pubspec.yaml
@@ -1,7 +1,16 @@
 name: fenv_graphql_codegen
-description: A starting point for Dart libraries or applications.
+description: >-
+  A Dart code generator that creates test-friendly wrappers and mock
+  implementations for GraphQL operations.
 version: 0.0.0
 repository: https://github.com/fenv-org/fenv_graphql_codegen
+topics:
+  - graphql
+  - codegen
+  - testing
+  - code-generator
+  - mocking
+  - graphql_codegen
 
 environment:
   sdk: ^3.9.0
