--- a/fenv_graphql_codegen/pubspec.yaml
+++ b/fenv_graphql_codegen/pubspec.yaml
@@ -14,9 +14,12 @@ topics:
 environment:
   sdk: ^3.9.0
 
-# Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
+  analyzer: ^7.6.0
+  build: ^2.5.4
+  build_config: ^1.1.1
+  dart_style: ^3.1.0
+  graphql_codegen: ^1.2.4
 
 dev_dependencies:
   lints: ^6.0.0
