--- a/fenv_graphql_codegen/pubspec.yaml
+++ b/fenv_graphql_codegen/pubspec.yaml
@@ -2,7 +2,7 @@ name: fenv_graphql_codegen
 description: >-
   A Dart code generator that creates test-friendly wrappers and mock
   implementations for GraphQL operations.
-version: 0.0.0+3
+version: 0.1.0
 repository: https://github.com/fenv-org/fenv_graphql_codegen
 topics:
   - graphql
