--- a/fenv_graphql_codegen/test/integration/test_packages/blog_platform_test/analysis_options.yaml
+++ b/fenv_graphql_codegen/test/integration/test_packages/blog_platform_test/analysis_options.yaml
@@ -22,6 +22,7 @@ include: package:lints/recommended.yaml
 analyzer:
   exclude:
     - '**.graphql.dart'
+    - 'golden/**'
 
 # For more information about the core and recommended set of lints, see
 # https://dart.dev/go/core-lints
