--- a/fenv_graphql_core/pubspec.yaml
+++ b/fenv_graphql_core/pubspec.yaml
@@ -2,7 +2,7 @@ name: fenv_graphql_core
 description: >-
   Runtime library providing core functionality for fenv GraphQL code generation,
   including query runners and state management.
-version: 0.0.0+1
+version: 0.1.0
 repository: https://github.com/fenv-org/fenv_graphql_codegen
 topics:
   - graphql
@@ -14,10 +14,21 @@ topics:
 environment:
   sdk: ^3.9.0
 
-# Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
+  flutter:
+    sdk: flutter
+  barrel_files_annotation: ^0.2.0
+  flutter_hooks: ^0.20.5
+  freezed_annotation: ^3.0.0
+  gql: ^1.0.1
+  graphql: ^5.2.2
+  graphql_flutter: ^5.2.0
+  hooks_riverpod: ^2.6.1
 
 dev_dependencies:
+  barrel_files: ^0.2.0
+  build_runner: ^2.5.4
+  flutter_test:
+    sdk: flutter
+  freezed: ^3.1.0
   lints: ^6.0.0
-  test: ^1.24.0
