--- a/fenv_graphql_test/pubspec.yaml
+++ b/fenv_graphql_test/pubspec.yaml
@@ -13,10 +13,17 @@ topics:
 environment:
   sdk: ^3.9.0
 
-# Add regular dependencies here.
 dependencies:
-  # path: ^1.9.0
+  flutter:
+    sdk: flutter
+  barrel_files_annotation: ^0.2.0
+  fenv_graphql_core: ^0.1.0
+  graphql: ^5.2.2
+  graphql_flutter: ^5.2.0
 
 dev_dependencies:
+  barrel_files: ^0.2.0
+  build_runner: ^2.5.4
+  flutter_test:
+    sdk: flutter
   lints: ^6.0.0
-  test: ^1.24.0
