--- a/fenv_graphql_codegen/pubspec.yaml
+++ b/fenv_graphql_codegen/pubspec.yaml
@@ -15,12 +15,13 @@ environment:
   sdk: ^3.9.0
 
 dependencies:
-  analyzer: ^7.6.0
-  build: ^2.5.4
-  build_config: ^1.1.1
-  dart_style: ^3.1.0
-  graphql_codegen: ^1.2.4
+  analyzer: ^8.1.1
+  build: ^4.0.2
+  build_config: ^1.2.0
+  dart_style: ^3.1.2
+  graphql_codegen: ^3.0.0
 
 dev_dependencies:
   lints: ^6.0.0
+  path: ^1.9.1
   test: ^1.24.0
