--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,7 +21,11 @@ jobs:
           echo "package=$PACKAGE" >> $GITHUB_OUTPUT
           echo "Publishing package: $PACKAGE"
 
-      - uses: dart-lang/setup-dart@v1
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          flutter-version: 3.35.6
+          cache: true
 
       - name: Run tests for fenv_graphql_codegen
         if: steps.extract.outputs.package == 'fenv_graphql_codegen'
