relocate integration test package to repository root
Move blog_platform_test from fenv_graphql_codegen/test/integration/test_packages/
to test_packages/ at repository root for easier maintenance and better separation
of test fixtures. Update integration test and helper script to reference new location.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /.claude/settings.local.json
 /.vscode/settings.json
 .flutter-plugins-dependencies
+
+# Dart/Flutter build artifacts
+.dart_tool/
+*.lock
+build/
