--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,9 @@ name: Publish to pub.dev
 on:
   push:
     tags:
-      - '*-v[0-9]+.[0-9]+.[0-9]+*'
+      - 'fenv_graphql_codegen-v[0-9]+.[0-9]+.[0-9]+*'
+      - 'fenv_graphql_core-v[0-9]+.[0-9]+.[0-9]+*'
+      - 'fenv_graphql_test-v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
   publish:
