remove barrel_files dependency and simplify package structure
- Replace barrel_files with manual exports in fenv_graphql_core.dart
- Add linter rules for code quality and consistency
- Update freezed class names to use $ prefix convention
- Regenerate freezed files with new configuration

--- a/fenv_graphql_core/analysis_options.yaml
+++ b/fenv_graphql_core/analysis_options.yaml
@@ -15,9 +15,12 @@ include: package:lints/recommended.yaml
 
 # Uncomment the following section to specify additional rules.
 
-# linter:
-#   rules:
-#     - camel_case_types
+linter:
+  rules:
+    - public_member_api_docs: true
+    - always_use_package_imports: true
+    - prefer_single_quotes: true
+    - sort_pub_dependencies: true
 
 # analyzer:
 #   exclude:
