--- a/fenv_graphql_core/build.yaml
+++ b/fenv_graphql_core/build.yaml
@@ -1,6 +1,6 @@
 targets:
   $default:
     builders:
-      barrel_files|barrel_files:
+      freezed:
         options:
-          barrel_file_name: "fenv_graphql_core.dart"
+          format: true
