--- a/test_packages/blog_platform_test/pubspec.yaml
+++ b/test_packages/blog_platform_test/pubspec.yaml
@@ -8,19 +8,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fenv_graphql_core: ^0.1.0
-  flutter_hooks: ^0.20.5
+  fenv_graphql_core: ^0.2.0
+  flutter_hooks: ^0.21.3+1
   gql: ^1.0.1
   graphql: ^5.2.2
   graphql_flutter: ^5.2.0
-  hooks_riverpod: ^2.6.1
+  hooks_riverpod: ^3.0.2
   http: ^1.5.0
   meta: ^1.16.0
 
 dev_dependencies:
-  build_runner: ^2.5.4
+  build_runner: ^2.7.0
   fenv_graphql_codegen:
     path: ../../fenv_graphql_codegen/
-  fenv_graphql_test: ^0.1.0
+  fenv_graphql_test: ^0.2.0
   flutter_lints: ^5.0.0
-  test: ^1.24.0
+  flutter_test:
+    sdk: flutter
