--- a/.github/workflows/publish-fenv_graphql_codegen.yml
+++ b/.github/workflows/publish-fenv_graphql_codegen.yml
@@ -17,10 +17,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Setup Dart SDK
-        uses: dart-lang/setup-dart@v1
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
-          sdk: '3.9'
+          channel: stable
+          flutter-version: '3.35.6'
+          cache: true
 
       - name: Install dependencies
         run: dart pub get
