--- a/.github/workflows/publish-fenv_graphql_codegen.yml
+++ b/.github/workflows/publish-fenv_graphql_codegen.yml
@@ -6,9 +6,7 @@ on:
       - 'fenv_graphql_codegen-v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
-  publish:
-    permissions:
-      id-token: write # Required for authentication using OIDC
+  test:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -18,20 +16,12 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-          flutter-version: '3.35.6'
-          cache: true
+        uses: flutter-actions/setup-flutter@54feb1e258158303e041b9eaf89314dcfbf6d38a
 
-      - name: Install dependencies
-        run: dart pub get
-
-      - name: Run tests
-        run: dart test
-
-      - name: Dry run publish
-        run: dart pub publish --dry-run
-
-      - name: Publish to pub.dev
-        run: dart pub publish -f
+  publish:
+    needs: test
+    permissions:
+      id-token: write # Required for authentication using OIDC
+    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+    with:
+      working-directory: fenv_graphql_codegen
