--- a/.github/workflows/publish-fenv_graphql_test.yml
+++ b/.github/workflows/publish-fenv_graphql_test.yml
@@ -9,26 +9,6 @@ jobs:
   publish:
     permissions:
       id-token: write # Required for authentication using OIDC
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: fenv_graphql_test
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v5
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-          flutter-version: '3.35.6'
-          cache: true
-
-      - name: Install dependencies
-        run: dart pub get
-
-      - name: Dry run publish
-        run: dart pub publish --dry-run
-
-      - name: Publish to pub.dev
-        run: dart pub publish -f
+    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+    with:
+      working-directory: fenv_graphql_test
