--- a/.github/workflows/publish-fenv_graphql_codegen.yml
+++ b/.github/workflows/publish-fenv_graphql_codegen.yml
@@ -18,6 +18,11 @@ jobs:
       - name: Setup Flutter
         uses: flutter-actions/setup-flutter@54feb1e258158303e041b9eaf89314dcfbf6d38a
 
+      - name: Test
+        run: |
+          dart pub get
+          dart test
+
   publish:
     needs: test
     permissions:
